--- a/007_HardHatEnvironment/package.json
+++ b/007_HardHatEnvironment/package.json
@@ -1,8 +1,11 @@
 {
   "dependencies": {
+    "ethers": "^5.6.9",
+    "fs-extra": "^10.1.0",
     "solc": "^0.8.15"
   },
-  "scripts": {
-    
+  "scripts": {},
+  "devDependencies": {
+    "dotenv": "^16.0.1"
   }
 }
