--- a/007_HardHatEnvironment/package.json
+++ b/007_HardHatEnvironment/package.json
@@ -6,6 +6,8 @@
   },
   "scripts": {},
   "devDependencies": {
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "prettier": "^2.7.1",
+    "prettier-plugin-solidity": "^1.0.0-beta.19"
   }
 }
