--- a/008_Lesson6HHSimpleStorage/.env.example
+++ b/008_Lesson6HHSimpleStorage/.env.example
@@ -1,4 +1,5 @@
 NODE_ENV=DEV||PROD
 ETHERSCAN_API_KEY=example
+COINMARKETCAP_API_KEY=example
 RINKEBY_RPC_URL=http://example.com:0000
 PRIVATE_KEY_1=example
